add html structure

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body class="page">
     <!-- header -->
-    <header class="header">
+    <header class="header page__header">
       <img src="./images/header-logo.svg" alt="Логотип контур России" class="header__img" />
       <ul class="header__lang-switch">
         <li>
@@ -231,8 +231,11 @@
 
       <!-- cover -->
       <section class="cover">
-        <h2 class="cover__title"></h2>
-        <p class="cover__subtitle"></p>
+        <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__subtitle"
+          >По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+          электричках.</a
+        >
       </section>
     </main>
 
