--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     </header>
     <main>
       <!-- lead -->
-      <section class="lead">
+      <section class="lead page__lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <figure>
+        <figure class="lead__image-wrapper">
           <img
             src="./images/lead-polka.jpg"
             alt="Девушка лежит на нижней боковой полке в поезде"
@@ -36,36 +36,39 @@
       </section>
 
       <!-- intro -->
-      <section class="intro">
-        <h2 class="intro__title">Чего мы там не видели?</h2>
-        <p class="intro__text">
-          По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
-          провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия
-          — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато
-          Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и
-          многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла
-          в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной
-          стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
-        </p>
-        <ul class="intro__list">
-          <li class="intro__list-item">
-            Часовых поясов<span class="intro__span-accent"> 11</span>
-          </li>
-          <li class="intro__list-item">
-            Объектов природного наследия ЮНЕСКО<span class="intro__span-accent"> 12</span>
-          </li>
-          <li class="intro__list-item">
-            Объектов культурного наследия ЮНЕСКО<span class="intro__span-accent"> 16</span>
-          </li>
-          <li class="intro__list-item">
-            Природных заповедников<span class="intro__span-accent"></span>105
-          </li>
-          <li class="intro__list-item">Аэропортов<span class="intro__span-accent"> 241</span></li>
-        </ul>
+      <section class="intro page__intro">
+        <div class="intro__wrapper">
+          <h2 class="intro__title">Чего мы там не видели?</h2>
+          <p class="intro__text">
+            По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
+            провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле,
+            Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами
+            плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету,
+            загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая
+            мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
+            километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные
+            вашего отпуска.
+          </p>
+          <ul class="intro__list">
+            <li class="intro__list-item">
+              Часовых поясов<span class="intro__span-accent"> 11</span>
+            </li>
+            <li class="intro__list-item">
+              Объектов природного наследия ЮНЕСКО<span class="intro__span-accent"> 12</span>
+            </li>
+            <li class="intro__list-item">
+              Объектов культурного наследия ЮНЕСКО<span class="intro__span-accent"> 16</span>
+            </li>
+            <li class="intro__list-item">
+              Природных заповедников<span class="intro__span-accent"></span>105
+            </li>
+            <li class="intro__list-item">Аэропортов<span class="intro__span-accent"> 241</span></li>
+          </ul>
+        </div>
       </section>
 
       <!-- photo-grid -->
-      <section class="photo-grid">
+      <section class="photo-grid page__photo-grid">
         <img
           src="./images/photo-grid-train.jpg"
           alt="Вид на природу из окна поезда"
@@ -118,27 +121,29 @@
       </section>
 
       <!-- places -->
-      <section class="places">
-        <article class="place">
+      <section class="places page__places">
+        <article class="place places__place">
           <h2 class="place__title">Куршская коса</h2>
           <img src="./images/place-kosa.jpg" alt="Корни деревьев в воде" class="place__img" />
           <div class="place__website">
             <p class="place__url-heading">URL</p>
             <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
           </div>
-          <p class="place__text">
-            Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
-            спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с
-            другой. Уникальная природная зона на краю российского анклава.
-          </p>
-          <p class="place__text">
-            На этом Калининградская область не заканчивается. Для путешественника и исследователя
-            там же по соседству — самая западная точка России, Балтийская коса, — и немецкое
-            наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету,
-            окуная в спокойствие природы и запах стального, прохладного моря.
-          </p>
+          <div class="place__description">
+            <p class="place__text">
+              Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
+              спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с
+              другой. Уникальная природная зона на краю российского анклава.
+            </p>
+            <p class="place__text">
+              На этом Калининградская область не заканчивается. Для путешественника и исследователя
+              там же по соседству — самая западная точка России, Балтийская коса, — и немецкое
+              наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету,
+              окуная в спокойствие природы и запах стального, прохладного моря.
+            </p>
+          </div>
         </article>
-        <article class="place">
+        <article class="place  page__places">
           <h2 class="place__title">Кольский</h2>
           <img src="./images/place-kolsky.jpg" alt="Заснеженный холм" class="place__img" />
           <div class="place__website">
@@ -149,19 +154,21 @@
               >National Geographic</a
             >
           </div>
-          <p class="place__text">
-            Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
-            тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
-          </p>
-          <p class="place__text">
-            Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в
-            Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об
-            уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой
-            скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное
-            сияние начинает сбываться с билетом в Мурманск.
-          </p>
+          <div class="place__description">
+            <p class="place__text">
+              Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
+              тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
+            </p>
+            <p class="place__text">
+              Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в
+              Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об
+              уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой
+              скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное
+              сияние начинает сбываться с билетом в Мурманск.
+            </p>
+          </div>
         </article>
-        <article class="place">
+        <article class="place  page__places">
           <h2 class="place__title">Алтай</h2>
           <img
             src="./images/place-altai.jpg"
@@ -176,19 +183,21 @@
               >Facebook</a
             >
           </div>
-          <p class="place__text">
-            Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль
-            хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в
-            автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.
-          </p>
-          <p class="place__text">
-            Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё
-            разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают
-            орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского
-            края.
-          </p>
+          <div class="place__description">
+            <p class="place__text">
+              Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль
+              хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в
+              автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.
+            </p>
+            <p class="place__text">
+              Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё
+              разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают
+              орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского
+              края.
+            </p>
+          </div>
         </article>
-        <article class="place">
+        <article class="place  page__places">
           <h2 class="place__title">Зимний Байкал</h2>
           <img
             src="./images/place-winter-baikal.jpg"
@@ -199,16 +208,18 @@
             <p class="place__url-heading">URL</p>
             <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
           </div>
-          <p class="place__text">
-            Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый
-            большой источник пресной воды и одно из красивейших мест в России.
-          </p>
-          <p class="place__text">
-            Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это
-            такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить
-            как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля»
-            был поставлен мировой рекорд — 197.011 км/ч.
-          </p>
+          <div class="place__description">
+            <p class="place__text">
+              Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый
+              большой источник пресной воды и одно из красивейших мест в России.
+            </p>
+            <p class="place__text">
+              Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это
+              такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить
+              как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля»
+              был поставлен мировой рекорд — 197.011 км/ч.
+            </p>
+          </div>
         </article>
         <article class="place">
           <h2 class="place__title">Карелия</h2>
@@ -217,25 +228,29 @@
             <p class="place__url-heading">URL</p>
             <a href="http://vodlozero.ru/" class="place__link">http://vodlozero.ru/</a>
           </div>
-          <p class="place__text">
-            Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не
-            растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
-            национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам
-            уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше,
-            чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы.
-            А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы
-            все знали, кто тут хозяин.
-          </p>
+          <div class="place__description">
+            <p class="place__text">
+              Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не
+              растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
+              национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам
+              уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше,
+              чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы.
+              А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы
+              все знали, кто тут хозяин.
+            </p>
+          </div>
         </article>
       </section>
 
       <!-- cover -->
-      <section class="cover">
-        <h2 class="cover__title">До Байкала «на собаках»</h2>
-        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__subtitle"
-          >По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
-          электричках.</a
-        >
+      <section class="cover page__cover">
+        <div class="cover__wrapper">
+          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__subtitle"
+            >По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+            электричках.</a
+          >
+        </div>
       </section>
     </main>
 
