--- a/index.html
+++ b/index.html
@@ -245,18 +245,20 @@
       <!-- cover -->
       <section class="cover page__cover">
         <div class="cover__wrapper">
-          <h2 class="cover__title">До Байкала «на собаках»</h2>
-          <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__subtitle"
-            >По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
-            электричках.</a
-          >
+          <div class="cover__text">
+            <h2 class="cover__title">До Байкала «на собаках»</h2>
+            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link"
+              >По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+              электричках.</a
+            >
+          </div>
         </div>
       </section>
     </main>
 
     <!-- footer -->
-    <footer class="footer">
-      <nav class="footer__menu">
+    <footer class="footer page__footer">
+      <nav>
         <ul class="footer__links">
           <li><a href="" class="footer__link">Карты</a></li>
           <li><a href="" class="footer__link">Погода</a></li>
