--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
           <img src="./images/place-kosa.jpg" alt="Корни деревьев в воде" class="place__img" />
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
+            <a href="http://park-kosa.ru" class="place__link" target="_blank">park-kosa.ru</a>
           </div>
           <div class="place__description">
             <p class="place__text">
               Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
-              спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с
-              другой. Уникальная природная зона на краю российского анклава.
+              спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря
+              с другой. Уникальная природная зона на краю российского анклава.
             </p>
             <p class="place__text">
               На этом Калининградская область не заканчивается. Для путешественника и исследователя
@@ -143,7 +143,7 @@
             </p>
           </div>
         </article>
-        <article class="place  page__places">
+        <article class="place places__place">
           <h2 class="place__title">Кольский</h2>
           <img src="./images/place-kolsky.jpg" alt="Заснеженный холм" class="place__img" />
           <div class="place__website">
@@ -151,24 +151,25 @@
             <a
               href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
               class="place__link"
+              target="_blank"
               >National Geographic</a
             >
           </div>
           <div class="place__description">
             <p class="place__text">
-              Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
-              тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
+              Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг
+              — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
             </p>
             <p class="place__text">
               Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в
               Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об
-              уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой
-              скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное
-              сияние начинает сбываться с билетом в Мурманск.
+              уроках географии. Возможно, вы не интересовались пронизывающей земную кору
+              сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта
+              увидеть северное сияние начинает сбываться с билетом в Мурманск.
             </p>
           </div>
         </article>
-        <article class="place  page__places">
+        <article class="place places__place">
           <h2 class="place__title">Алтай</h2>
           <img
             src="./images/place-altai.jpg"
@@ -180,14 +181,16 @@
             <a
               href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
               class="place__link"
+              target="_blank"
               >Facebook</a
             >
           </div>
           <div class="place__description">
             <p class="place__text">
-              Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль
-              хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в
-              автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.
+              Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать
+              вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы
+              откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест —
+              горным воздухом.
             </p>
             <p class="place__text">
               Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё
@@ -197,7 +200,7 @@
             </p>
           </div>
         </article>
-        <article class="place  page__places">
+        <article class="place places__place">
           <h2 class="place__title">Зимний Байкал</h2>
           <img
             src="./images/place-winter-baikal.jpg"
@@ -206,7 +209,9 @@
           />
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
+            <a href="https://vk.com/baikalmile" class="place__link" target="_blank"
+              >https://vk.com/baikalmile</a
+            >
           </div>
           <div class="place__description">
             <p class="place__text">
@@ -214,10 +219,10 @@
               большой источник пресной воды и одно из красивейших мест в России.
             </p>
             <p class="place__text">
-              Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это
-              такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить
-              как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля»
-              был поставлен мировой рекорд — 197.011 км/ч.
+              Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу.
+              Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается
+              развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
+              «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
             </p>
           </div>
         </article>
@@ -226,17 +231,19 @@
           <img src="./images/place-karelia.jpg" alt="Пейзаж вдоль реки" class="place__img" />
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a href="http://vodlozero.ru/" class="place__link">http://vodlozero.ru/</a>
+            <a href="http://vodlozero.ru/" class="place__link" target="_blank"
+              >http://vodlozero.ru/</a
+            >
           </div>
           <div class="place__description">
             <p class="place__text">
-              Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не
-              растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
+              Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница
+              не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
               национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам
-              уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше,
-              чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы.
-              А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы
-              все знали, кто тут хозяин.
+              уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце
+              раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не
+              встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены
+              медвежьими когтями. Чтобы все знали, кто тут хозяин.
             </p>
           </div>
         </article>
@@ -247,7 +254,10 @@
         <div class="cover__wrapper">
           <div class="cover__text">
             <h2 class="cover__title">До Байкала «на собаках»</h2>
-            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link"
+            <a
+              href="https://stampsy.com/na-elektrichkakh-do-baikala"
+              class="cover__link"
+              target="_blank"
               >По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
               электричках.</a
             >
@@ -260,11 +270,11 @@
     <footer class="footer page__footer">
       <nav>
         <ul class="footer__links">
-          <li><a href="" class="footer__link">Карты</a></li>
-          <li><a href="" class="footer__link">Погода</a></li>
-          <li><a href="" class="footer__link">Расписание</a></li>
-          <li><a href="" class="footer__link">Календарь</a></li>
-          <li><a href="" class="footer__link">Путешествия</a></li>
+          <li><a href="" class="footer__link" target="_blank">Карты</a></li>
+          <li><a href="" class="footer__link" target="_blank">Погода</a></li>
+          <li><a href="" class="footer__link" target="_blank">Расписание</a></li>
+          <li><a href="" class="footer__link" target="_blank">Календарь</a></li>
+          <li><a href="" class="footer__link" target="_blank">Путешествия</a></li>
         </ul>
       </nav>
       <p class="footer__copyright">© 2021. Гордиенов Олег</p>
