add retina images and refactoring

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <figure class="lead__image-wrapper">
           <img
-            src="./images/lead-polka.jpg"
-            alt="Девушка лежит на нижней боковой полке в поезде"
             class="lead__img"
+            src="./images/lead-polka.jpg"
+            srcset="./images/lead-polka@2x.jpg 2x"
+            alt="Девушка лежит на нижней боковой полке в поезде"
           />
           <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
         </figure>
@@ -71,50 +72,62 @@
       <section class="photo-grid page__photo-grid">
         <img
           src="./images/photo-grid-train.jpg"
+          srcset="./images/photo-grid-train@2x.png 2x"
           alt="Вид на природу из окна поезда"
           class="photo-grid__item"
         /><img
           src="./images/photo-grid-atharva-tulsi.jpg"
+          srcset="./images/photo-grid-atharva-tulsi@2x.png 2x"
           alt="Облака"
           class="photo-grid__item"
         /><img
           src="./images/photo-grid-tuman.jpg"
+          srcset="./images/photo-grid-tuman@2x.png 2x"
           alt="Силуэт лошади в тумане"
           class="photo-grid__item"
         /><img
           src="./images/photo-grid-sochi.jpg"
+          srcset="./images/photo-grid-sochi@2x.png 2x"
           alt="Вид сверху тумана над деревьями"
           class="photo-grid__item"
         /><img
           src="./images/photo-grid-arisa.jpg"
+          srcset="./images/photo-grid-arisa@2x.png 2x"
           alt="Колесо машины наехало на лед"
           class="photo-grid__item"
         /><img
           src="./images/photo-grid-baikal.jpg"
+          srcset="./images/photo-grid-baikal@2x.png 2x"
           alt="Берег озера Байкал"
           class="photo-grid__item"
         /><img
           src="./images/photo-grid-elbrus.jpg"
+          srcset="./images/photo-grid-elbrus@2x.png 2x"
           alt="Общий вид горы Эльбрус"
           class="photo-grid__item"
         /><img
           src="./images/photo-grid-kondratiev.jpg"
+          srcset="./images/photo-grid-kondratiev@2x.png 2x"
           alt="Общий вид волнозащитных сооружений"
           class="photo-grid__item"
         /><img
           src="./images/photo-grid-kamchatka-1.jpg"
+          srcset="./images/photo-grid-kamchatka-1@2x.png 2x"
           alt="Вид сверху гор на Камчатке"
           class="photo-grid__item"
         /><img
           src="./images/photo-grid-kamchatka-2.jpg"
+          srcset="./images/photo-grid-kamchatka-2@2x.png 2x"
           alt="Общий вид гор на Камчатке"
           class="photo-grid__item"
         /><img
           src="./images/photo-grid-baikal-2.jpg"
+          srcset="./images/photo-grid-baikal-2@2x.png 2x"
           alt="Вид с утеса на озеро Байкал"
           class="photo-grid__item"
         /><img
           src="./images/photo-grid-ergaki.jpg"
+          srcset="./images/photo-grid-ergaki@2x.png 2x"
           alt="Вид сверху на туманные вершины Ергаки"
           class="photo-grid__item"
         />
@@ -124,7 +137,12 @@
       <section class="places page__places">
         <article class="place places__place">
           <h2 class="place__title">Куршская коса</h2>
-          <img src="./images/place-kosa.jpg" alt="Корни деревьев в воде" class="place__img" />
+          <img
+            src="./images/place-kosa.jpg"
+            srcset="./images/place-kosa@2x.png 2x"
+            alt="Корни деревьев в воде"
+            class="place__img"
+          />
           <div class="place__website">
             <p class="place__url-heading">URL</p>
             <a href="http://park-kosa.ru" class="place__link" target="_blank">park-kosa.ru</a>
@@ -136,8 +154,7 @@
               с другой. Уникальная природная зона на краю российского анклава.
             </p>
             <p class="place__text">
-              На этом Калининградская область не заканчивается. 
-              Для путешественника и исследователя
+              На этом Калининградская область не заканчивается. Для путешественника и исследователя
               там же по соседству — самая западная точка России, Балтийская коса, — и немецкое
               наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету,
               окуная в спокойствие природы и запах стального, прохладного моря.
@@ -146,7 +163,12 @@
         </article>
         <article class="place places__place">
           <h2 class="place__title">Кольский</h2>
-          <img src="./images/place-kolsky.jpg" alt="Заснеженный холм" class="place__img" />
+          <img
+            src="./images/place-kolsky.jpg"
+            srcset="./images/place-kolsky@2x.png 2x"
+            alt="Заснеженный холм"
+            class="place__img"
+          />
           <div class="place__website">
             <p class="place__url-heading">URL</p>
             <a
@@ -174,6 +196,7 @@
           <h2 class="place__title">Алтай</h2>
           <img
             src="./images/place-altai.jpg"
+            srcset="./images/place-altai@2x.png 2x"
             alt="Ноутбук на фоне лесной природы"
             class="place__img"
           />
@@ -205,6 +228,7 @@
           <h2 class="place__title">Зимний Байкал</h2>
           <img
             src="./images/place-winter-baikal.jpg"
+            srcset="./images/place-winter-baikal@2x.png 2x"
             alt="Красивый узор на льду"
             class="place__img"
           />
@@ -221,7 +245,7 @@
             </p>
             <p class="place__text">
               Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу.
-              Это такой вид спорта, когда лыжник привязывает себя     к мотоциклу, и тандем старается
+              Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается
               развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
               «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
             </p>
@@ -229,7 +253,12 @@
         </article>
         <article class="place">
           <h2 class="place__title">Карелия</h2>
-          <img src="./images/place-karelia.jpg" alt="Пейзаж вдоль реки" class="place__img" />
+          <img
+            src="./images/place-karelia.jpg"
+            srcset="./images/place-karelia@2x.png 2x"
+            alt="Пейзаж вдоль реки"
+            class="place__img"
+          />
           <div class="place__website">
             <p class="place__url-heading">URL</p>
             <a href="http://vodlozero.ru/" class="place__link" target="_blank"
