refactoring: bug fixes

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
       </section>
 
       <!-- intro -->
-      <section class="intro page__intro">
-        <div class="intro__wrapper">
+      <section class="intro page__intro intro__wrapper">      
           <h2 class="intro__title">Чего мы там не видели?</h2>
           <p class="intro__text">
             По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
@@ -65,72 +64,61 @@
             </li>
             <li class="intro__list-item">Аэропортов<span class="intro__span-accent"> 241</span></li>
           </ul>
-        </div>
       </section>
 
       <!-- photo-grid -->
       <section class="photo-grid page__photo-grid">
-        <img
-          src="./images/photo-grid-train.jpg"
-          srcset="./images/photo-grid-train@2x.png 2x"
-          alt="Вид на природу из окна поезда"
-          class="photo-grid__item"
-        /><img
-          src="./images/photo-grid-atharva-tulsi.jpg"
-          srcset="./images/photo-grid-atharva-tulsi@2x.png 2x"
-          alt="Облака"
-          class="photo-grid__item"
-        /><img
-          src="./images/photo-grid-tuman.jpg"
-          srcset="./images/photo-grid-tuman@2x.png 2x"
-          alt="Силуэт лошади в тумане"
-          class="photo-grid__item"
-        /><img
-          src="./images/photo-grid-sochi.jpg"
-          srcset="./images/photo-grid-sochi@2x.png 2x"
-          alt="Вид сверху тумана над деревьями"
-          class="photo-grid__item"
-        /><img
-          src="./images/photo-grid-arisa.jpg"
-          srcset="./images/photo-grid-arisa@2x.png 2x"
-          alt="Колесо машины наехало на лед"
-          class="photo-grid__item"
-        /><img
-          src="./images/photo-grid-baikal.jpg"
-          srcset="./images/photo-grid-baikal@2x.png 2x"
-          alt="Берег озера Байкал"
-          class="photo-grid__item"
-        /><img
-          src="./images/photo-grid-elbrus.jpg"
-          srcset="./images/photo-grid-elbrus@2x.png 2x"
-          alt="Общий вид горы Эльбрус"
-          class="photo-grid__item"
-        /><img
-          src="./images/photo-grid-kondratiev.jpg"
-          srcset="./images/photo-grid-kondratiev@2x.png 2x"
-          alt="Общий вид волнозащитных сооружений"
-          class="photo-grid__item"
-        /><img
-          src="./images/photo-grid-kamchatka-1.jpg"
-          srcset="./images/photo-grid-kamchatka-1@2x.png 2x"
-          alt="Вид сверху гор на Камчатке"
-          class="photo-grid__item"
-        /><img
-          src="./images/photo-grid-kamchatka-2.jpg"
-          srcset="./images/photo-grid-kamchatka-2@2x.png 2x"
-          alt="Общий вид гор на Камчатке"
-          class="photo-grid__item"
-        /><img
-          src="./images/photo-grid-baikal-2.jpg"
-          srcset="./images/photo-grid-baikal-2@2x.png 2x"
-          alt="Вид с утеса на озеро Байкал"
-          class="photo-grid__item"
-        /><img
-          src="./images/photo-grid-ergaki.jpg"
-          srcset="./images/photo-grid-ergaki@2x.png 2x"
-          alt="Вид сверху на туманные вершины Ергаки"
-          class="photo-grid__item"
-        />
+        <ul class="photo-grid__list">
+          <li class="photo-grid__item"><img class="photo-grid__image"
+            src="./images/photo-grid-train.jpg"
+            srcset="./images/photo-grid-train@2x.png 2x"
+            alt="Вид на природу из окна поезда"/>
+          </li><li class="photo-grid__item"><img class="photo-grid__image"
+            src="./images/photo-grid-atharva-tulsi.jpg"
+            srcset="./images/photo-grid-atharva-tulsi@2x.png 2x"
+            alt="Облака"
+          /></li><li class="photo-grid__item"><img class="photo-grid__image"
+            src="./images/photo-grid-tuman.jpg"
+            srcset="./images/photo-grid-tuman@2x.png 2x"
+            alt="Силуэт лошади в тумане"
+          /></li><li class="photo-grid__item"><img class="photo-grid__image"
+            src="./images/photo-grid-sochi.jpg"
+            srcset="./images/photo-grid-sochi@2x.png 2x"
+            alt="Вид сверху тумана над деревьями"
+          /></li><li class="photo-grid__item"><img class="photo-grid__image"
+            src="./images/photo-grid-arisa.jpg"
+            srcset="./images/photo-grid-arisa@2x.png 2x"
+            alt="Колесо машины наехало на лед"
+          /></li><li class="photo-grid__item"><img class="photo-grid__image"
+            src="./images/photo-grid-baikal.jpg"
+            srcset="./images/photo-grid-baikal@2x.png 2x"
+            alt="Берег озера Байкал"
+          /></li><li class="photo-grid__item"><img class="photo-grid__image"
+            src="./images/photo-grid-elbrus.jpg"
+            srcset="./images/photo-grid-elbrus@2x.png 2x"
+            alt="Общий вид горы Эльбрус"
+          /></li><li class="photo-grid__item"><img class="photo-grid__image"
+            src="./images/photo-grid-kondratiev.jpg"
+            srcset="./images/photo-grid-kondratiev@2x.png 2x"
+            alt="Общий вид волнозащитных сооружений"
+          /></li><li class="photo-grid__item"><img class="photo-grid__image"
+            src="./images/photo-grid-kamchatka-1.jpg"
+            srcset="./images/photo-grid-kamchatka-1@2x.png 2x"
+            alt="Вид сверху гор на Камчатке"
+          /></li><li class="photo-grid__item"><img class="photo-grid__image"
+            src="./images/photo-grid-kamchatka-2.jpg"
+            srcset="./images/photo-grid-kamchatka-2@2x.png 2x"
+            alt="Общий вид гор на Камчатке"
+          /></li><li class="photo-grid__item"><img class="photo-grid__image"
+            src="./images/photo-grid-baikal-2.jpg"
+            srcset="./images/photo-grid-baikal-2@2x.png 2x"
+            alt="Вид с утеса на озеро Байкал"
+          /></li><li class="photo-grid__item"><img class="photo-grid__image"
+            src="./images/photo-grid-ergaki.jpg"
+            srcset="./images/photo-grid-ergaki@2x.png 2x"
+            alt="Вид сверху на туманные вершины Ергаки"/>
+          </li>  
+        </ul>
       </section>
 
       <!-- places -->
@@ -281,18 +269,13 @@
 
       <!-- cover -->
       <section class="cover page__cover">
-        <div class="cover__wrapper">
-          <div class="cover__text">
-            <h2 class="cover__title">До Байкала «на собаках»</h2>
-            <a
-              href="https://stampsy.com/na-elektrichkakh-do-baikala"
-              class="cover__link"
-              target="_blank"
-              >По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
-              электричках.</a
-            >
-          </div>
-        </div>
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala"
+        class="cover__link"
+        target="_blank">
+          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <p class="cover__paragraph">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+            электричках.</p>
+        </a>
       </section>
     </main>
 
