refactoring intro block

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </section>
 
       <!-- intro -->
-      <section class="intro page__intro intro__wrapper">      
+      <section class="intro page__intro">      
           <h2 class="intro__title">Чего мы там не видели?</h2>
           <p class="intro__text">
             По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
